--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -413,13 +413,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17252764">
                                         
-                                            51 comments
+                                            52 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=kjw">kjw</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528338179"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    108 points
+                                    110 points
                                 </span>
                             </td>
                         </tr>
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://ubere.ng/2JgqOvt">Food Discovery with Uber Eats: Building a Query Understanding Engine</a>
+                                    <a href="https://www.jpl.nasa.gov/news/news.php?feature=7151">Juno Solves 39-Year Old Mystery of Jupiter Lightning</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17248253">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17250714">
                                         
-                                            25 comments
+                                            17 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=myhrvold">myhrvold</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528301158"
+                                            href="https://news.ycombinator.com/user?id=ohjeez">ohjeez</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528316188"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     108 points
                                 </span>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528351804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528352405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
