--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://jochen-hoenicke.de/trezor-power-analysis/">Extracting the private key from a TREZOR with an oscilloscope (2015)</a>
+                                    <a href="https://www.reuters.com/article/us-facebook-privacy-congress/facebook-confirms-data-sharing-with-chinese-companies-idUSKCN1J11TY">Facebook confirms data sharing with Chinese companies</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17250697">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17246437">
                                         
-                                            57 comments
+                                            75 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mlejva">mlejva</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528316094"
+                                            href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528287882"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    289 points
+                                    290 points
                                 </span>
                             </td>
                         </tr>
@@ -491,7 +491,7 @@
                                             href="https://news.ycombinator.com/user?id=XzetaU8">XzetaU8</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528288121"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    224 points
+                                    225 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528353603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528354203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
