--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -443,7 +443,7 @@
                                             href="https://news.ycombinator.com/user?id=hamstercat">hamstercat</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528232589"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    233 points
+                                    234 points
                                 </span>
                             </td>
                         </tr>
@@ -467,7 +467,7 @@
                                             href="https://news.ycombinator.com/user?id=javinpaul">javinpaul</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528300175"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    228 points
+                                    230 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.catb.org/esr/halloween/">Memorandum on Microsoft’s strategy against Linux and Open Source software (1998)</a>
+                                    <a href="https://www.bloomberg.com/news/articles/2018-06-06/github-is-microsoft-s-7-5-billion-undo-button">GitHub Is Microsoft’s $7.5B Undo Button</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17226485">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17250963">
                                         
-                                            51 comments
+                                            139 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=duncan_bayne">duncan_bayne</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528109210"
+                                            href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528317973"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    215 points
+                                    218 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528355404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528356005" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
