--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -341,7 +341,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17245864">
                                         
-                                            456 comments
+                                            457 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dluan">dluan</a></strong> &nbsp;•&nbsp;
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://twitter.com/guieevc/status/1002494428748140544">Cisco says 90% of internet traffic goes through Erlang-controlled nodes</a>
+                                    <a href="https://jochen-hoenicke.de/trezor-power-analysis/">Extracting the private key from a TREZOR with an oscilloscope (2015)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17218190">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17250697">
                                         
-                                            93 comments
+                                            59 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=okket">okket</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528006878"
+                                            href="https://news.ycombinator.com/user?id=mlejva">mlejva</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528316094"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     304 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528356005" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528356604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
