--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -221,7 +221,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17245032">
                                         
-                                            66 comments
+                                            67 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Ours90">Ours90</a></strong> &nbsp;•&nbsp;
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://developer.apple.com/documentation/create_ml">Create ML</a>
+                                    <a href="http://nautil.us/issue/60/searches/does-theranos-mark-the-peak-of-the-silicon-valley-bubble">We Shouldn’t Be Surprised at the Theranos Fraud</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17232200">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17252311">
                                         
-                                            27 comments
+                                            115 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=gok">gok</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528144914"
+                                            href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528331391"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     142 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528356604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528357204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
