--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -227,7 +227,7 @@
                                             href="https://news.ycombinator.com/user?id=nikse">nikse</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528312102"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    100 points
+                                    101 points
                                 </span>
                             </td>
                         </tr>
@@ -347,7 +347,7 @@
                                             href="https://news.ycombinator.com/user?id=myhrvold">myhrvold</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528301158"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    109 points
+                                    110 points
                                 </span>
                             </td>
                         </tr>
@@ -461,7 +461,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17250415">
                                         
-                                            91 comments
+                                            92 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=gscott">gscott</a></strong> &nbsp;•&nbsp;
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.brisbanetimes.com.au/technology/the-social-robot-that-could-help-save-indigenous-languages-20180601-p4ziyj.html">A social robot that could help save indigenous languages</a>
+                                    <a href="https://www.saveur.com/article/Kitchen/The-Art-of-Kimchi">The Art of Kimchi (2009)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17250638">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17246516">
                                         
-                                            4 comments
+                                            54 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=sorted">sorted</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528315745"
+                                            href="https://news.ycombinator.com/user?id=smacktoward">smacktoward</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528288628"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    56 points
+                                    93 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528357204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528357804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
