--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://blog.floydhub.com/teaching-my-robot-with-tensorflow/">Teaching My Robot with TensorFlow</a>
+                                    <a href="https://blog.ycombinator.com/introducing-yc-series-a-batches/">Introducing YC Series A Batches</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17250856">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17230916">
                                         
-                                            7 comments
+                                            32 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=whatrocks">whatrocks</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528317223"
+                                            href="https://news.ycombinator.com/user?id=runesoerensen">runesoerensen</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528138482"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    118 points
+                                    121 points
                                 </span>
                             </td>
                         </tr>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528363205" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528363805" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
