--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -127,9 +127,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17226225" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17242485" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://bithublab.org/">BitHubLab, Search for projects on all the major Git platforms</a>
+                                    <a href="https://github.com/joowani/binarytree">Python library for learning binarytrees</a>
                                 </span>
                             </td>
                         </tr>
@@ -245,13 +245,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17251471">
                                         
-                                            198 comments
+                                            199 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=omot">omot</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528322584"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    480 points
+                                    488 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528365604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528366204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
