--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/news/articles/2018-06-06/github-is-microsoft-s-7-5-billion-undo-button">GitHub Is Microsoft’s $7.5B Undo Button</a>
+                                    <a href="https://www.gamasutra.com/view/news/318588/The_great_video_game_exodus.php">The great video game exodus</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17250963">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17217081">
                                         
-                                            204 comments
+                                            140 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528317973"
+                                            href="https://news.ycombinator.com/user?id=smacktoward">smacktoward</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527983596"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    264 points
+                                    265 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528366805" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528367403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
