--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.eff.org/takedowns/critic-uses-dmca-avoid-criticism">A Critic Uses the DMCA to Avoid Criticism</a>
+                                    <a href="https://www.cbsnews.com/news/social-security-says-costs-will-exceed-income-this-year/">Social Security says system's costs will exceed income this year</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17253356">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17250415">
                                         
-                                            3 comments
+                                            92 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=DiabloD3">DiabloD3</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528346745"
+                                            href="https://news.ycombinator.com/user?id=gscott">gscott</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528314259"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    28 points
+                                    69 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528368603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528369203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
