--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -317,7 +317,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17253801">
                                         
-                                            1 comments
+                                            2 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=robin_reala">robin_reala</a></strong> &nbsp;•&nbsp;
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theverge.com/2018/6/4/17424472/youtube-lgbt-demonetization-ads-algorithm">YouTube is still restricting and demonetizing LGBT videos</a>
+                                    <a href="https://code.visualstudio.com/updates/v1_24">Visual Studio Code – May 2018 Update</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17245991">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17250463">
                                         
-                                            20 comments
+                                            5 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=venturis_voice">venturis_voice</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528282759"
+                                            href="https://news.ycombinator.com/user?id=pookieinc">pookieinc</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528314540"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    40 points
+                                    25 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528368603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528369203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
