--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.anandtech.com/show/12912/amd-zen-2-update-7nm-epyc-in-labs-now-launching-in-2019">AMD Zen 2 Update: 7nm EPYC in Labs Now, Launching in 2019</a>
+                                    <a href="http://nautil.us/issue/60/searches/does-theranos-mark-the-peak-of-the-silicon-valley-bubble">We Shouldn’t Be Surprised at the Theranos Fraud</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17245025">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17252311">
                                         
-                                            73 comments
+                                            135 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=robin_reala">robin_reala</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528269997"
+                                            href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528331391"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     172 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528369203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528369804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
