--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/news/articles/2018-06-06/github-is-microsoft-s-7-5-billion-undo-button">GitHub Is Microsoft’s $7.5B Undo Button</a>
+                                    <a href="https://www.gnu.org/philosophy/open-source-misses-the-point.en.html">Why Open Source Misses the Point of Free Software (2016)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17250963">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17230785">
                                         
-                                            225 comments
+                                            213 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528317973"
+                                            href="https://news.ycombinator.com/user?id=pera">pera</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528137811"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    289 points
+                                    292 points
                                 </span>
                             </td>
                         </tr>
@@ -413,13 +413,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17252585">
                                         
-                                            37 comments
+                                            38 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=xvilka">xvilka</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528335610"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    235 points
+                                    237 points
                                 </span>
                             </td>
                         </tr>
@@ -563,7 +563,7 @@
                                             href="https://news.ycombinator.com/user?id=CrankyBear">CrankyBear</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528314954"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    218 points
+                                    219 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528370404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528371004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
