--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/radareorg/cutter">Cutter – A Qt and C++ GUI for Radare2 reverse engineering framework</a>
+                                    <a href="https://bytemybits.gitlab.io/post/2018-05-23-how-to-android-without-google-easy-way/">How to Android without Google</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17252585">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17213808">
                                         
-                                            38 comments
+                                            98 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=xvilka">xvilka</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528335610"
+                                            href="https://news.ycombinator.com/user?id=schrodingersbox">schrodingersbox</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527933214"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    237 points
+                                    238 points
                                 </span>
                             </td>
                         </tr>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528371004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528371604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
