--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -287,19 +287,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://rawcdn.githack.com/8x-protocol/whitepaper/master/latest.pdf">Decentralised recurring payments on Ethereum through the use of stable coins [pdf]</a>
+                                    <a href="https://medium.com/wipchat/building-a-faster-mvp-with-github-checks-52f0a91e5191">Building a Faster MVP with GitHub Checks</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17246354">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17247787">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=kermankohli">kermankohli</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528287339"
+                                            href="https://news.ycombinator.com/user?id=ahawkins">ahawkins</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528298065"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    9 points
+                                    7 points
                                 </span>
                             </td>
                         </tr>
@@ -348,7 +348,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528373404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528374004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
