--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17236967" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17242485" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/arsham/blush">Grep with colours written in Go</a>
+                                    <a href="https://github.com/joowani/binarytree">Python library for learning binarytrees</a>
                                 </span>
                             </td>
                         </tr>
@@ -155,9 +155,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17227564" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17236967" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.podscripter.co/?ref=hn">Podscripter – Automated Transcription for Podcasters</a>
+                                    <a href="https://github.com/arsham/blush">Grep with colours written in Go</a>
                                 </span>
                             </td>
                         </tr>
@@ -503,17 +503,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://medium.com/byteconf/stripe-is-building-a-ruby-typechecker-d6cd7cee6abf">Stripe is building a Ruby typechecker</a>
+                                    <a href="https://jochen-hoenicke.de/trezor-power-analysis/">Extracting the private key from a TREZOR with an oscilloscope (2015)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17217815">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17250697">
                                         
-                                            182 comments
+                                            72 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=thibaut_barrere">thibaut_barrere</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527997894"
+                                            href="https://news.ycombinator.com/user?id=mlejva">mlejva</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528316094"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     350 points
                                 </span>
@@ -527,19 +527,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://jochen-hoenicke.de/trezor-power-analysis/">Extracting the private key from a TREZOR with an oscilloscope (2015)</a>
+                                    <a href="https://medium.com/byteconf/stripe-is-building-a-ruby-typechecker-d6cd7cee6abf">Stripe is building a Ruby typechecker</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17250697">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17217815">
                                         
-                                            72 comments
+                                            182 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mlejva">mlejva</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528316094"
+                                            href="https://news.ycombinator.com/user?id=thibaut_barrere">thibaut_barrere</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527997894"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    349 points
+                                    350 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528378203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528378804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
