--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17236967" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17242485" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/arsham/blush">Grep with colours written in Go</a>
+                                    <a href="https://github.com/joowani/binarytree">Python library for learning binarytrees</a>
                                 </span>
                             </td>
                         </tr>
@@ -155,9 +155,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17227564" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17236967" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.podscripter.co/?ref=hn">Podscripter – Automated Transcription for Podcasters</a>
+                                    <a href="https://github.com/arsham/blush">Grep with colours written in Go</a>
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528378203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528378804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
