--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17236967" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17242485" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/arsham/blush">Grep with colours written in Go</a>
+                                    <a href="https://github.com/joowani/binarytree">Python library for learning binarytrees</a>
                                 </span>
                             </td>
                         </tr>
@@ -155,9 +155,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17227564" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17236967" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.podscripter.co/?ref=hn">Podscripter – Automated Transcription for Podcasters</a>
+                                    <a href="https://github.com/arsham/blush">Grep with colours written in Go</a>
                                 </span>
                             </td>
                         </tr>
@@ -275,7 +275,7 @@
                                             href="https://news.ycombinator.com/user?id=mlejva">mlejva</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528316094"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    349 points
+                                    350 points
                                 </span>
                             </td>
                         </tr>
@@ -347,7 +347,7 @@
                                             href="https://news.ycombinator.com/user?id=gnufied">gnufied</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528254757"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    335 points
+                                    336 points
                                 </span>
                             </td>
                         </tr>
@@ -389,7 +389,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17250963">
                                         
-                                            279 comments
+                                            282 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
@@ -419,7 +419,7 @@
                                             href="https://news.ycombinator.com/user?id=leephillips">leephillips</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528199656"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    316 points
+                                    317 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528378203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528378804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
