--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17236967" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17242485" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/arsham/blush">Grep with colours written in Go</a>
+                                    <a href="https://github.com/joowani/binarytree">Python library for learning binarytrees</a>
                                 </span>
                             </td>
                         </tr>
@@ -155,9 +155,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17227564" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17236967" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.podscripter.co/?ref=hn">Podscripter – Automated Transcription for Podcasters</a>
+                                    <a href="https://github.com/arsham/blush">Grep with colours written in Go</a>
                                 </span>
                             </td>
                         </tr>
@@ -365,13 +365,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17252311">
                                         
-                                            163 comments
+                                            164 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528331391"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    189 points
+                                    191 points
                                 </span>
                             </td>
                         </tr>
@@ -437,7 +437,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17247088">
                                         
-                                            70 comments
+                                            71 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=MarkusWinand">MarkusWinand</a></strong> &nbsp;•&nbsp;
@@ -563,7 +563,7 @@
                                             href="https://news.ycombinator.com/user?id=ihuman">ihuman</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528298012"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    171 points
+                                    172 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528378203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528378804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
