--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://docs.datomic.com/cloud/ions/ions.html">Ions: Develop cloud applications by deploying to a running Datomic cluster</a>
+                                    <a href="https://www.bloomberg.com/news/articles/2018-06-05/this-former-tesla-staffer-became-an-internet-millionaire-in-his-spare-time">A Former Tesla Staffer Became an Internet Millionaire in His Spare Time</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17254222">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17239128">
                                         
-                                            28 comments
+                                            114 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=simonpure">simonpure</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528360094"
+                                            href="https://news.ycombinator.com/user?id=pdog">pdog</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528215328"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    124 points
+                                    128 points
                                 </span>
                             </td>
                         </tr>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528382406" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528383005" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
