--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -227,7 +227,7 @@
                                             href="https://news.ycombinator.com/user?id=xvilka">xvilka</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528335610"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    279 points
+                                    283 points
                                 </span>
                             </td>
                         </tr>
@@ -509,7 +509,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17250512">
                                         
-                                            213 comments
+                                            214 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=CrankyBear">CrankyBear</a></strong> &nbsp;•&nbsp;
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://lkml.org/lkml/2018/6/5/769">Torvalds: Standards need to be questioned</a>
+                                    <a href="http://nautil.us/issue/60/searches/does-theranos-mark-the-peak-of-the-silicon-valley-bubble">We Shouldn’t Be Surprised at the Theranos Fraud</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17242103">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17252311">
                                         
-                                            169 comments
+                                            180 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=l1k">l1k</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528233068"
+                                            href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528331391"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    214 points
+                                    215 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528383005" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528383604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
