--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -443,7 +443,7 @@
                                             href="https://news.ycombinator.com/user?id=whatrocks">whatrocks</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528317223"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    154 points
+                                    155 points
                                 </span>
                             </td>
                         </tr>
@@ -509,13 +509,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17252322">
                                         
-                                            108 comments
+                                            112 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=troydavis">troydavis</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528331535"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    148 points
+                                    149 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://toddwschneider.com/posts/nyc-subway-data-analysis/">Using Countdown Clock Data to Understand the New York City Subway</a>
+                                    <a href="https://docs.datomic.com/cloud/ions/ions.html">Ions: Develop cloud applications by deploying to a running Datomic cluster</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17246538">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17254222">
                                         
-                                            62 comments
+                                            42 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=lil_tee">lil_tee</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528288764"
+                                            href="https://news.ycombinator.com/user?id=simonpure">simonpure</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528360094"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     144 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528389604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528390204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
