--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://qz.com/1294941/a-debate-over-plant-consciousness-is-forcing-us-to-confront-the-limitations-of-the-human-mind/">A Debate Over Plant Consciousness, Limitations of the Human Mind</a>
+                                    <a href="http://www.collaborativefund.com/blog/useful-hacks/">Useful hacks</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17252692">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17254097">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=tomdell">tomdell</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528337062"
+                                            href="https://news.ycombinator.com/user?id=waqasaday">waqasaday</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528358546"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    9 points
+                                    5 points
                                 </span>
                             </td>
                         </tr>
@@ -420,7 +420,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528392603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528393204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
