--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://ciml.info/">A Course in Machine Learning</a>
+                                    <a href="https://story.californiasunday.com/infosys-india-tech">The end of India’s ‘IT miracle’?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17214588">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17252947">
                                         
-                                            27 comments
+                                            337 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527947521"
+                                            href="https://news.ycombinator.com/user?id=fourmii">fourmii</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528340858"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     254 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528396204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528396805" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
