--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://twitter.com/UpEnd_org/status/1004308027078578176">GitHub now censoring repos critical of the Microsoft acquisition</a>
+                                    <a href="https://blog.sfox.com/bitcoin-vs-ethereum-stacking-up-a-currency-against-a-supercomputer-be5b9c00764c">Bitcoin vs. Ethereum: Stacking Up a Currency Against a Supercomputer</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17251255">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17256076">
                                         
-                                            3 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=aarongray">aarongray</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528320293"
+                                            href="https://news.ycombinator.com/user?id=PBPowerStone">PBPowerStone</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528382074"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    31 points
+                                    6 points
                                 </span>
                             </td>
                         </tr>
@@ -323,7 +323,7 @@
                                             href="https://news.ycombinator.com/user?id=pookieinc">pookieinc</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528314540"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    27 points
+                                    28 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528396805" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528397405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
